<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity_liner_layout">


    <TextView
        android:layout_width="282dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="50dp"
        android:background="#673AB7"
        android:text="@string/relative_layout"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="shree"
        android:src="@drawable/yt"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="missingConstraints"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/input1"
        android:layout_width="194dp"
        android:layout_height="77dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="50dp"
        android:background="#00BCD4"
        android:text="@string/layout"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="262dp" />


    <TextView
        android:id="@+id/input2"
        android:layout_width="192dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="50dp"
        android:background="@color/red"
        android:text="@string/input1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="378dp" />

    <TextView
        android:id="@+id/input3"
        android:layout_width="189dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50dp"
        android:background="#2196F3"
        android:text="@string/input2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="450dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/yt" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/yt" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/yt" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/yt" />


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="215dp"
        android:layout_height="69dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="50dp"
        android:background="@color/black"
        android:text="@string/button"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="527dp" />


</androidx.constraintlayout.widget.ConstraintLayout>